[package]
name = "gpmf_parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["time"]
time = ["dep:time"]
# Enables tests that read uncommitted binary fixtures under test_files/.
# Off by default so `cargo test` succeeds on a fresh clone.
with-fixtures = []

[dependencies]
thiserror = "1.0"
byteorder = "1"
chrono = "0.4"
time = { version = "0.3", features = ["macros"], optional = true }
